# cerebralcoin-core

./: .appveyor.yml  .cproject  .gitignore  .project  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  libcerebralcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: lint_04_install.sh  lint_05_before_script.sh  lint_06_script.sh  test_03_before_install.sh  test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
.tx/: config
build_msvc/: README.md  cerebralcoin.sln  cerebralcoin_config.h  libsecp256k1_config.h  msvc-autogen.py
contrib/: README.md  cerebralcoin-cli.bash-completion  cerebralcoin-qt.pro  cerebralcoin-tx.bash-completion  cerebralcoind.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
depends/: README.md  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cerebralcoin-conf.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  productivity.md  psbt.md  reduce-traffic.md  release-notes-0.18.1-16257.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  (+1 more)
doc/man/: Makefile.am  cerebralcoin-cli.1  cerebralcoin-qt.1  cerebralcoin-tx.1  cerebralcoin-wallet.1  cerebralcoind.1
(+1004 files in other folders)
