dist_man1_MANS=

if BUILD_CEREBRALCOIND
  dist_man1_MANS+=cerebralcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=cerebralcoin-qt.1
endif

if BUILD_CEREBRALCOIN_CLI
  dist_man1_MANS+=cerebralcoin-cli.1
endif

if BUILD_CEREBRALCOIN_TX
  dist_man1_MANS+=cerebralcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_CEREBRALCOIN_WALLET
  dist_man1_MANS+=cerebralcoin-wallet.1
endif
endif
